--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -1,13 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0448bdc4",
+   "metadata": {},
+   "source": [
+    "## **Laboratorio 3**\n",
+    "Juan Pablo Solis\n",
+    "Isabella Miralles\n",
+    "\n",
+    "### **Parte 1, Modelos de Deep Learning**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fc00bce1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import opendatasets as od # no para python 3.13\n",
     "import pandas as pd\n",
     "import os\n",
     "import zipfile\n",
@@ -44,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "93d53b25",
    "metadata": {},
    "outputs": [
@@ -63,7 +74,6 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
-    "# Ruta al folder de imágenes\n",
     "folder = \"./MMNIST/train/m0/\"\n",
     "\n",
     "# Mostrar las primeras 9 imágenes\n",
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f39b2c24",
    "metadata": {},
    "outputs": [
@@ -104,13 +114,12 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
     "\n",
-    "# Ruta al folder de imágenes\n",
+    "\n",
+    "\n",
     "folder = \"./MMNIST/train/m1/\"\n",
     "\n",
-    "# Mostrar las primeras 9 imágenes\n",
+    "\n",
     "for i in range(9):\n",
     "    plt.subplot(3, 3, i + 1)\n",
     "    filename = os.path.join(folder, f\"0.{i}.png\")\n",
@@ -132,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "82c71916",
    "metadata": {},
    "outputs": [
@@ -148,13 +157,11 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
     "\n",
-    "# Ruta al folder de imágenes\n",
+    "\n",
     "folder = \"./MMNIST/train/m2/\"\n",
     "\n",
-    "# Mostrar las primeras 9 imágenes\n",
+    "\n",
     "for i in range(9):\n",
     "    plt.subplot(3, 3, i + 1)\n",
     "    filename = os.path.join(folder, f\"0.{i}.png\")\n",
@@ -168,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "39c91eb7",
    "metadata": {},
    "outputs": [
@@ -195,17 +202,12 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from collections import Counter\n",
-    "from PIL import Image\n",
-    "import numpy as np\n",
     "\n",
-    "# Ruta al conjunto de datos reorganizado\n",
+    "\n",
+    "\n",
     "ruta_dataset = './MMNIST_reorganizado/train'\n",
     "\n",
-    "# Leer clases y contar imágenes por clase\n",
+    "\n",
     "conteo_clases = {}\n",
     "resoluciones = []\n",
     "\n",
@@ -215,13 +217,13 @@
     "        archivos = os.listdir(ruta_clase)\n",
     "        conteo_clases[clase] = len(archivos)\n",
     "        \n",
-    "        # Obtener resoluciones de las primeras 100 imágenes\n",
+    "        \n",
     "        for archivo in archivos[:100]:\n",
     "            img_path = os.path.join(ruta_clase, archivo)\n",
     "            with Image.open(img_path) as img:\n",
-    "                resoluciones.append(img.size)  # (ancho, alto)\n",
+    "                resoluciones.append(img.size)  \n",
     "\n",
-    "# Mostrar distribución por clase\n",
+    "\n",
     "plt.figure(figsize=(10,5))\n",
     "sns.barplot(x=list(conteo_clases.keys()), y=list(conteo_clases.values()))\n",
     "plt.title(\"Distribución de imágenes por clase\")\n",
@@ -230,13 +232,13 @@
     "plt.grid(axis='y')\n",
     "plt.show()\n",
     "\n",
-    "# Mostrar ejemplo de resoluciones\n",
+    "\n",
     "res_counter = Counter(resoluciones)\n",
     "print(\"Resoluciones de las imágenes (ancho x alto):\")\n",
     "for res, count in res_counter.items():\n",
     "    print(f\"  {res}: {count} muestras\")\n",
     "\n",
-    "# Verificar si el conjunto está balanceado\n",
+    "\n",
     "valores = list(conteo_clases.values())\n",
     "media = np.mean(valores)\n",
     "desviacion = np.std(valores)\n",
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "8b385a5b",
    "metadata": {},
    "outputs": [
@@ -453,7 +455,7 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "# Accuracy\n",
     "plt.plot(history.history['accuracy'], label='Entrenamiento')\n",
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b2b789c6",
    "metadata": {},
    "outputs": [
@@ -753,7 +755,7 @@
    "source": [
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
-    "# Definir EarlyStopping\n",
+    "#  EarlyStopping\n",
     "early_stop = EarlyStopping(\n",
     "    monitor='val_accuracy',\n",
     "    patience=3,\n",
