Feat: Fixed part 2 of lab due to github error

--- a/Lab3.ipynb
+++ b/Lab3.ipynb
@@ -9,6 +9,8 @@
     "Juan Pablo Solis\n",
     "Isabella Miralles\n",
     "\n",
+    "### **link github**\n",
+    "https://github.com/JPS4321/lab3_datascience\n",
     "### **Parte 1, Modelos de Deep Learning**"
    ]
   },
